# DeepQC

./: LICENCE  README.md  men.h
c++/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arithmatic_coder.h  cmake_install.cmake  main.cpp  men.h
example/: README.md  run.bash  run.sh
pre_trained_models/: BGISEQ-500_1.pt  BGISEQ-500_2.pt  BGISEQ-500_2_stat_info  BGISEQ-500_len_150_1.stat_info  HiSeq_X_Ten_2.stat_info  HiSeq_X_Ten_len_150_1.pt  HiSeq_X_Ten_len_150_2.pt  Hiseq2000_1.pt  Hiseq2000_2.pt  Hiseq2000_len_101_2.stat_info  Hiseq2000_stat_1_info  Illumina_Genome_Analyzer_II_len_36.pt  Illumina_Genome_Analyzer_II_len_36.stat_info  Illumina_Genome_Analyzer_II_len_76.pt  Illumina_Genome_Analyzer_II_len_76.stat_info  Illumina_Genome_Analyzer_IIx_len_76.pt  Illumina_Genome_Analyzer_IIx_len_76.stat_info  Illumina_Genome_Analyzer_len_36.pt  Illumina_Genome_Analyzer_len_36.stat_info  NovaSeq_6000_1.stat_info  NovaSeq_6000_2.pt  NovaSeq_6000_len_150_1.pt  NovaSeq_6000_len_150_2.stat_info
python/: README.md  discard_qual.py  dumpModel.py  extract_qual.py  get_stat_info.py  model.py  model_cpp.py  run.sh  select_train_eval.py  stat_info  train.py  train.sh  utils.py
python/checkpoints/: DeepQC.pth
python/data/: test.npz  train.npz
